--- a/documentation/tsconfig.json
+++ b/documentation/tsconfig.json
@@ -5,6 +5,9 @@
     "lib": ["DOM", "ESNext"],
     "baseUrl": ".",
     "resolveJsonModule": true,
+    "paths": {
+      "@site/*": ["./*"]
+    },
 
     // Duplicated from the root config, because TS does not support extending
     // multiple configs and we want to dogfood the @tsconfig/docusaurus one
