--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+        working-directory: ./documentation
       - name: Build website
+        working-directory: ./documentation
         run: yarn build
 
       # Popular action to deploy to GitHub Pages:
