--- a/documentation/package.json
+++ b/documentation/package.json
@@ -18,24 +18,24 @@
     "@docusaurus/core": "^2.4.0",
     "@docusaurus/plugin-pwa": "^2.4.0",
     "@docusaurus/plugin-sitemap": "^2.4.0",
-    "@docusaurus/preset-classic": "^2.4.0",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.4.0",
+    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.4.1",
     "@swc/core": "1.3.41",
-    "@types/react-lottie": "^1.2.6",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.3",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-lottie": "^1.2.3",
+    "semver": "^7.5.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "lottie-react": "2.4.0",
     "rehype-katex": "4",
     "remark-math": "3",
     "sass": "^1.58.3",
     "swc-loader": "^0.2.3"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.0",
+    "@docusaurus/module-type-aliases": "^2.4.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "@types/jest": "^29.2.5",
     "typescript": "^4.7.4"
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=16.14"
   }
 }
