--- a/documentation/package.json
+++ b/documentation/package.json
@@ -25,13 +25,13 @@
     "lottie-react": "2.4.0",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
+    "@mdx-js/react": "^1.6.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-katex": "4",
     "remark-math": "3",
     "sass": "^1.58.3",
-    "semver": "^7.5.4",
-    "swc-loader": "^0.2.3"
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.1",
