--- a/documentation/package.json
+++ b/documentation/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.3",
     "prism-react-renderer": "^1.3.5",
+    "@docusaurus/mdx-loader": "^2.4.1",
     "raw-loader": "^4.0.2",
     "@mdx-js/react": "^1.6.22",
     "react": "^17.0.2",
