--- a/documentation/tsconfig.json
+++ b/documentation/tsconfig.json
@@ -2,40 +2,22 @@
   // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "compilerOptions": {
-    "lib": ["DOM", "ESNext"],
+    "allowJs": true,
+    "esModuleInterop": true,
+    "jsx": "preserve",
+    "lib": ["DOM"],
+    "moduleResolution": "bundler",
+    "module": "esnext",
+    "noEmit": true,
+    "types": [
+      "node",
+      "@docusaurus/module-type-aliases",
+      "@docusaurus/theme-classic"
+    ],
     "baseUrl": ".",
-    "resolveJsonModule": true,
-
-    // Duplicated from the root config, because TS does not support extending
-    // multiple configs and we want to dogfood the @tsconfig/docusaurus one
-    "allowUnreachableCode": false,
-    "exactOptionalPropertyTypes": false,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "noImplicitReturns": true,
-    "noPropertyAccessFromIndexSignature": false,
-    "noUncheckedIndexedAccess": true,
-    "strict": true,
-    "alwaysStrict": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "useUnknownInCatchVariables": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "importsNotUsedAsValues": "remove",
-
-    "moduleResolution": "NodeNext",
-
-    // This is important. We run `yarn tsc` in website so we can catch issues
-    // with our declaration files (mostly names that are forgotten to be
-    // imported, invalid semantics...). Because we don't have end-to-end type
-    // tests, removing this would make things much harder to catch.
-    "skipLibCheck": false,
-    "types": ["jest"]
-  },
-  "exclude": ["src/sw.js"]
+    "paths": {
+      "@site/*": ["./*"]
+    },
+    "skipLibCheck": true
+  }
 }
