--- a/documentation/package.json
+++ b/documentation/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.0.0-alpha.0",
-    "@docusaurus/plugin-sitemap": "^2.4.1",
+    "@docusaurus/plugin-sitemap": "3.0.0-alpha.0",
     "@docusaurus/preset-classic": "2.4.1",
     "@docusaurus/remark-plugin-npm2yarn": "^2.4.1",
     "@swc/core": "1.3.41",
