--- a/documentation/package.json
+++ b/documentation/package.json
@@ -15,16 +15,16 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "3.0.0-alpha.0",
-    "@docusaurus/plugin-sitemap": "3.0.0-alpha.0",
-    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/plugin-sitemap": "^2.4.1",
+    "@docusaurus/preset-classic": "^2.4.1",
     "@docusaurus/remark-plugin-npm2yarn": "^2.4.1",
+    "@mdx-js/react": "^1.6.22",
     "@swc/core": "1.3.41",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.3",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
-    "@mdx-js/react": "^1.6.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-katex": "4",
