--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 17
+          # node-version: 17 # Use the latest Node.js version
           cache: yarn
 
+      - name: ci dependencies
+        run: yarn add codecov --frozen-lockfile
       - name: Install dependencies
+        # Install all deps from yarn.lock
         run: yarn install --frozen-lockfile
         working-directory: ./documentation
       - name: Build website
