--- a/documentation/package.json
+++ b/documentation/package.json
@@ -16,19 +16,22 @@
   },
   "dependencies": {
     "@docusaurus/core": "^2.4.1",
+    "@docusaurus/plugin-pwa": "^2.4.1",
     "@docusaurus/plugin-sitemap": "^2.4.1",
     "@docusaurus/preset-classic": "^2.4.1",
     "@docusaurus/remark-plugin-npm2yarn": "^2.4.1",
-    "@mdx-js/react": "^1.6.22",
+    "@swc/core": "1.3.41",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.3",
     "prism-react-renderer": "^1.3.5",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "lottie-react":"2.4.0",
     "rehype-katex": "4",
     "remark-math": "3",
     "sass": "^1.58.3",
-    "semver": "^7.5.4"
+    "swc-loader": "^0.2.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.1",
