--- a/documentation/package.json
+++ b/documentation/package.json
@@ -12,10 +12,11 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "dev": "docusaurus start"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
+    "@docusaurus/core":  "^2.4.1",
     "@docusaurus/plugin-pwa": "^2.4.1",
     "@docusaurus/plugin-sitemap": "^2.4.1",
     "@docusaurus/preset-classic": "^2.4.1",
@@ -24,6 +25,7 @@
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.3",
     "prism-react-renderer": "^1.3.5",
+    "@mdx-js/react": "^1.6.22",
     "raw-loader": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
